# data-modelling-sdk

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LLM.txt  PLAN.md  README.md  SECURITY.md  TODO.md  customer.yaml  out.yaml
.cursor/rules/: specify-rules.mdc
.github/workflows/: ci.yml  publish.yml  release-cli.yml  release-sdk.yml  release-wasm.yml  version-check.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.trunk/: trunk.yaml
crates/core/: Cargo.toml
crates/core/src/export/: cads.rs  odcs.rs  odps.rs  pdf.rs
crates/core/src/import/: odcl.rs  odcs.rs
crates/core/src/models/: cads.rs  odps.rs  workspace.rs
crates/core/src/models/odcs/: converters.rs  property.rs
crates/core/src/staging/: catalog.rs  export.rs  iceberg_table.rs  ingest.rs  mod.rs
crates/core/tests/: integration_tests.rs  odcs_comprehensive_tests.rs  odcs_e2e_roundtrip_tests.rs
crates/odm/: Cargo.toml
crates/odm/src/: main.rs
crates/odm/src/commands/: db.rs  staging.rs
crates/wasm/: Cargo.toml
docs/: ARCHITECTURE.md  CLI.md  SCHEMA_OVERVIEW.md
schemas/: README.md  bpmn-2.0.xsd  cads.schema.json  decision-schema.json  decisions-index-schema.json  dmn-1.3.xsd  knowledge-index-schema.json  knowledge-schema.json  odps-json-schema-latest.json  openapi-3.1.1.json  workspace-schema.json
scripts/: check-versions.sh
specs/001-odps-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-odps-validation/checklists/: requirements.md
specs/001-odps-validation/contracts/: cli-api.md
specs/001-wasm-exports/: data-model.md  missing-wasm-functions.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-wasm-exports/checklists/: requirements.md
specs/001-wasm-exports/contracts/: wasm-bindings.md
specs/002-table-metadata/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-table-metadata/checklists/: requirements.md
specs/002-table-metadata/contracts/: README.md  table-api.md
specs/003-odcs-field-preservation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-odcs-field-preservation/checklists/: requirements.md
specs/003-odcs-field-preservation/contracts/: column-data-api.md  universal-converter-api.md  wasm-bindings-api.md
specs/003-odcs-field-preservation/schemas/: cads.schema.json
specs/003-odcs-field-preservation/test-fixtures/: example.odcl.yaml  full-example.odcs.yaml
specs/004-bpmn-dmn-openapi/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-bpmn-dmn-openapi/checklists/: requirements.md
specs/004-bpmn-dmn-openapi/contracts/: bpmn-api.md  dmn-api.md  openapi-api.md  openapi-to-odcs-api.md
specs/005-databricks-sql-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-databricks-sql-support/checklists/: requirements.md
specs/005-databricks-sql-support/contracts/: api.md
src/: lib.rs
src/cli/: error.rs  main.rs  validation.rs
src/cli/commands/: db.rs  decision.rs  export.rs  import.rs  knowledge.rs  mod.rs  query.rs  validate.rs
src/convert/: converter.rs  migrate_dataflow.rs  mod.rs  openapi_to_odcs.rs
src/database/: config.rs  duckdb.rs  mod.rs  postgres.rs  schema.rs  sync.rs
src/export/: avro.rs  bpmn.rs  cads.rs  dataflow.rs  decision.rs  dmn.rs  json_schema.rs  knowledge.rs  markdown.rs  mod.rs  odcl.rs  odcs.rs  odps.rs  openapi.rs  pdf.rs  protobuf.rs
src/import/: avro.rs  bpmn.rs  cads.rs  dataflow.rs  decision.rs  dmn.rs  json_schema.rs  knowledge.rs  mod.rs  odcl.rs  odcs.rs  odcs_shared.rs  odps.rs  openapi.rs  protobuf.rs  sql.rs
src/model/: loader.rs  mod.rs  saver.rs
src/models/: bpmn.rs  cads.rs  column.rs  data_model.rs  decision.rs  dmn.rs  domain.rs  enums.rs  knowledge.rs  mod.rs  odps.rs  openapi.rs  relationship.rs  table.rs  tag.rs  workspace.rs
src/validation/: input.rs  mod.rs  relationships.rs  tables.rs  xml.rs
tests/: cads_tests.rs  domain_tests.rs  export_tests.rs  import_tests.rs  integration_tests.rs  model_tests.rs  models_tests.rs  nested_structures_tests.rs  odcs_comprehensive_tests.rs  odps_tests.rs  struct_reserved_names_tests.rs  tag_tests.rs  wasm_tests.rs
tests/cli/: export_tests.rs  import_tests.rs  integration_tests.rs  mod.rs  validation_tests.rs
