[package]
name = "data-modelling-sdk"
version = "1.4.0"
edition = "2024"
authors = ["Mark Olliver"]
license = "MIT"
description = "Shared SDK for model operations across platforms (API, WASM, Native)"
repository = "https://github.com/pixie79/data-modelling-sdk"

[lib]
name = "data_modelling_sdk"
crate-type = ["rlib", "cdylib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async support
async-trait = "0.1"
tokio = { version = "1", features = ["fs"], optional = true }

# UUID - v4 (random) and v5 (deterministic) support
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (for API backend)
reqwest = { version = "0.12", features = ["json", "native-tls", "cookies"], default-features = false, optional = true }
urlencoding = { version = "2.1", optional = true }

# SQL parsing
sqlparser = "0.53"
regex = "1"
datafusion = { version = "45", default-features = false, features = [], optional = true }

# Graph operations (for validation)
petgraph = "0.6"

# YAML processing
yaml-rust = "0.4"

# Logging
tracing = "0.1"

# Base64 encoding (for PNG export)
base64 = "0.22"

# Image processing (for PNG export)
image = { version = "0.24", optional = true }
imageproc = { version = "0.23", optional = true }

# Git operations (optional, feature-gated)
git2 = { version = "0.19", optional = true }

# WASM support (optional, feature-gated)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = ["IdbDatabase", "IdbFactory", "IdbObjectStore", "IdbRequest", "IdbTransaction", "IdbTransactionMode", "IdbOpenDbRequest", "IdbVersionChangeEvent", "Window", "Storage", "console"] }
js-sys = { version = "0.3", optional = true }
# Enable js feature for getrandom (required by transitive dependencies like ahash)
getrandom = { version = "0.2", features = ["js"] }
# UUID with js feature for WASM (must override main dependency for WASM target)
uuid = { version = "1.0", features = ["v4", "v5", "serde", "js"] }
# petgraph is available for WASM (tracing is already in main dependencies)
petgraph = "0.6"

# Models are now defined in the SDK itself - no dependency on API
# The API will convert between SDK models and API models as needed

[features]
default = ["api-backend"]
api-backend = ["reqwest", "urlencoding"]
native-fs = ["tokio"]  # Enable tokio for native file system operations (required for FileSystemStorageBackend)
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "web-sys", "js-sys"]
png-export = ["image", "imageproc"]
databricks-dialect = ["datafusion"]  # Enable datafusion for Databricks SQL dialect support
git = ["git2"]  # Enable Git operations (for both API and native app)
schema-validation = ["jsonschema"]  # Enable JSON Schema validation for ODCS/ODCL schemas

[dependencies.jsonschema]
version = "0.20"
optional = true

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
