[workspace]
resolver = "2"
members = ["crates/core", "crates/odm", "crates/wasm"]

# Root package for backward compatibility - re-exports data-modelling-core
[package]
name = "data-modelling-sdk"
version = "2.0.5"
edition = "2024"
authors = ["Mark Olliver"]
license = "MIT"
description = "Shared SDK for model operations across platforms (API, WASM, Native)"
repository = "https://github.com/OffeneDatenmodellierung/data-modelling-sdk"

[lib]
name = "data_modelling_sdk"
crate-type = ["rlib"]

[dependencies]
# Re-export core library
data-modelling-core = { path = "crates/core", version = "2.0.5" }

[features]
default = ["api-backend"]
api-backend = ["data-modelling-core/api-backend"]
native-fs = ["data-modelling-core/native-fs"]
png-export = ["data-modelling-core/png-export"]
databricks-dialect = ["data-modelling-core/databricks-dialect"]
git = ["data-modelling-core/git"]
schema-validation = ["data-modelling-core/schema-validation"]
odps-validation = ["data-modelling-core/odps-validation"]
bpmn = ["data-modelling-core/bpmn"]
dmn = ["data-modelling-core/dmn"]
openapi = ["data-modelling-core/openapi"]
database = ["data-modelling-core/database"]
duckdb-backend = ["data-modelling-core/duckdb-backend"]
postgres-backend = ["data-modelling-core/postgres-backend"]
staging = ["data-modelling-core/staging"]
staging-postgres = ["data-modelling-core/staging-postgres"]
inference = ["data-modelling-core/inference"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("odps-validation", "cli", "schema-validation", "database", "duckdb-backend", "postgres-backend", "cli-full", "staging", "staging-postgres", "s3", "databricks", "inference", "wasm"))'] }

[[example]]
name = "test_sql"
path = "examples/test_sql.rs"
