[package]
name = "odm"
version = "2.0.1"
edition = "2024"
authors = ["Mark Olliver"]
license = "MIT"
description = "CLI tool for data modelling operations"
repository = "https://github.com/OffeneDatenmodellierung/data-modelling-sdk"

[[bin]]
name = "odm"
path = "src/main.rs"

[dependencies]
# Core library
data-modelling-core = { path = "../core", features = ["api-backend", "native-fs", "database"] }

# CLI support
clap = { version = "4.5", features = ["derive"] }
zip = "0.6"
toml = "0.8"
sha2 = "0.10"

# Serialization (for CLI output)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Base64 encoding (for PDF export)
base64 = "0.22"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"

# HTTP client (for reference resolution)
reqwest = { version = "0.12", features = ["json", "native-tls", "cookies", "blocking"], default-features = false }
urlencoding = "2.1"

# Async runtime
tokio = { version = "1", features = ["fs", "rt-multi-thread"] }

# UUID
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }

# Regex
regex = "1"

[features]
default = ["openapi"]
openapi = ["data-modelling-core/openapi"]
bpmn = ["data-modelling-core/bpmn"]
dmn = ["data-modelling-core/dmn"]
git = ["data-modelling-core/git"]
odps-validation = ["data-modelling-core/odps-validation"]
schema-validation = ["data-modelling-core/schema-validation"]
api-backend = ["data-modelling-core/api-backend"]
database = ["data-modelling-core/database"]
duckdb-backend = ["database", "data-modelling-core/duckdb-backend"]
postgres-backend = ["database", "data-modelling-core/postgres-backend"]
staging = ["data-modelling-core/staging"]
staging-postgres = ["data-modelling-core/staging-postgres"]
inference = ["data-modelling-core/inference"]
iceberg = ["data-modelling-core/iceberg"]

# LLM-enhanced schema refinement
llm = ["data-modelling-core/llm"]
llm-online = ["llm", "data-modelling-core/llm-online"]
llm-offline = ["llm", "data-modelling-core/llm-offline"]

# Schema mapping
mapping = ["data-modelling-core/mapping", "inference"]

# Full pipeline integration
pipeline = ["data-modelling-core/pipeline", "staging", "inference", "mapping"]

# Full CLI with all features
cli-full = ["duckdb-backend", "staging", "inference", "mapping", "pipeline"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("schema-validation", "api-backend"))'] }
