[package]
name = "data-modelling-wasm"
version = "2.0.3"
edition = "2024"
authors = ["Mark Olliver"]
license = "MIT"
description = "WASM bindings for data modelling SDK"
repository = "https://github.com/OffeneDatenmodellierung/data-modelling-sdk"

[lib]
name = "data_modelling_wasm"
crate-type = ["cdylib"]

[dependencies]
# Core library (without native features, with wasm feature for browser storage)
data-modelling-core = { path = "../core", default-features = false, features = ["wasm"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# UUID with js feature for WASM
uuid = { version = "1.0", features = ["v4", "v5", "serde", "js"] }

# Time (for tests)
chrono = { version = "0.4", features = ["serde"] }

# WASM support
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["IdbDatabase", "IdbFactory", "IdbObjectStore", "IdbRequest", "IdbTransaction", "IdbTransactionMode", "IdbOpenDbRequest", "IdbVersionChangeEvent", "Window", "Storage", "console"] }
js-sys = "0.3"

# Enable wasm_js feature for getrandom
getrandom = { version = "0.3", features = ["wasm_js"] }

# jsonschema for WASM (no HTTP resolution)
[dependencies.jsonschema]
version = "0.38.1"
optional = true
default-features = false

[features]
default = []
openapi = ["data-modelling-core/openapi"]
odps-validation = ["data-modelling-core/odps-validation", "jsonschema"]
png-export = ["data-modelling-core/png-export"]
